Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12961

Oops in mdd_changelog_fini()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • Upstream
    • None
    • 3
    • 9223372036854775807

      Lustre: DEBUG MARKER: == sanity-lfsck test 1b: LFSCK can find out and repair the missing FID-in-LMA ======================== 17:30:06 (1573561806)
      ....
      LustreError: 14722:0:(nodemap_storage.c:205:nodemap_cache_find_create()) cannot destroy nodemap index: rc = -2
      LustreError: 14722:0:(obd_mount_server.c:2011:server_fill_super()) Unable to start targets: -2
      LustreError: 14758:0:(osp_object.c:592:osp_attr_get()) lustre-MDT0001-osp-MDT0000:osp_attr_get update error [0x200000009:0x1:0x0]: rc = -108
      LustreError: 14758:0:(lod_sub_object.c:931:lod_sub_prep_llog()) lustre-MDT0000-mdtlov: can't get id from catalogs: rc = -108
      LustreError: 14758:0:(lod_dev.c:425:lod_sub_recovery_thread()) lustre-MDT0001-osp-MDT0000 get update log failed: rc = -108
      BUG: unable to handle kernel paging request at 00007f6ab2f3b350
      PGD 0 P4D 0 
      Oops: 0002 [#1] SMP DEBUG_PAGEALLOC
      CPU: 1 PID: 14722 Comm: mount.lustre Tainted: G        W  O     --------- ---  4.18.0 #31
      Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
      RIP: 0010:kthread_stop+0x38/0x290
      Code: 05 fd fd f3 7e 89 c0 48 0f a3 05 13 97 1b 01 0f 82 f5 00 00 00 f0 ff 45 20 f6 45 26 20 0f 84 88 01 00 00 48 8b 9d 48 09 00 00 <f0> 80 0b 02 48 89 ef e8 4c ff ff ff 48 89 ef e8 04 a7 00 00 48 8d
      RSP: 0018:ffff880109c9f950 EFLAGS: 00010246
      RAX: 0000000000000000 RBX: 00007f6ab2f3b350 RCX: 0000000000000000
      RDX: 0000000000000002 RSI: 0000000000000001 RDI: ffff880100582000
      RBP: ffff880100582000 R08: 0000000000000001 R09: 0000000000000001
      R10: 0000000000000001 R11: 000000000009e800 R12: ffff880109c9fa70
      R13: ffff880100582000 R14: ffff8800c3a30588 R15: 0000000000000001
      FS:  00007f9ff4518880(0000) GS:ffff88011b400000(0000) knlGS:0000000000000000
      CS:  0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      CR2: 00007f6ab2f3b350 CR3: 0000000109401000 CR4: 00000000000006a0
      Call Trace:
       mdd_changelog_fini+0x203/0x250 [mdd]
       mdd_process_config+0xdf/0x620 [mdd]
       mdt_stack_fini+0x300/0xba0 [mdt]
       mdt_device_fini+0x82c/0xeb0 [mdt]
       class_cleanup+0x689/0xb50 [obdclass]
       class_process_config+0x153e/0x30f0 [obdclass]
       ? class_manual_cleanup+0xd1/0x670 [obdclass]
       ? class_manual_cleanup+0xd1/0x670 [obdclass]
       ? cache_alloc_debugcheck_after+0x138/0x150
       ? __kmalloc+0x20c/0x2e0
       class_manual_cleanup+0x197/0x670 [obdclass]
       server_put_super+0xb09/0x1d50 [obdclass]
       server_fill_super+0x928/0xf80 [obdclass]
       lustre_fill_super+0xdb5/0x29c0 [obdclass]
       ? sget_userns+0x47a/0x4f0
       ? lustre_common_put_super+0xb70/0xb70 [obdclass]
       mount_nodev+0x3c/0x90
       lustre_mount+0x20/0x30 [obdclass]
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: